# dynamic_generic_visitor

./: CMakeLists.txt  LICENSE  README.md
docs/: TODO.md
examples/: CMakeLists.txt
examples/shape_visitor/: CMakeLists.txt  shape_visitor.cpp
libs/: CMakeLists.txt
libs/shape_plugin/: CMakeLists.txt  Triangle.hpp  shape_plugin.cpp
libs/shapes/: Area.hpp  AreaVisitor.hpp  CMakeLists.txt  Circle.hpp  Circumference.hpp  CircumferenceVisitor.hpp  Rectangle.hpp  Shape.hpp  ShapeVisitor.hpp  VisitableShape.hpp
libs/visitor/: CMakeLists.txt  DynamicVisitor.hpp  DynamicVisitor.tpp  StaticVisitor.hpp  TypeIndex.hpp  Visitable.hpp  Visitable.tpp
